tests/fixtures/invalid/bytes_mul_bytes.py
# Cannot multiply Bytes by Bytes
x: bytes = b"hello" * b"world"
